--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
       integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
       crossorigin="anonymous"
     />
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/site.css" />
     <link rel="stylesheet" href="css/user.css" />
     <link rel="stylesheet" href="css/stories.css" />
@@ -35,9 +39,11 @@
     <nav>
       <div class="navbar-brand">
         <a class="nav-link" href="#" id="nav-all">Hack or Snooze</a>
+        <a class="nav-link" href="#" id="add-story-btn">| Submit</a>
+        <a class="nav-link" href="#" id="fav-btn">| Favorites</a>
+        <a class="nav-link" href="#" id="my-stories-btn">| My Stories</a>
       </div>
       <div class="nav-right">
-        <a class="nav-link" href="#" id="add-story-btn">submit</a>
         <a class="nav-link" href="#" id="nav-login">login/signup</a>
         <a class="nav-link" href="#" id="nav-user-profile"></a>
         <a class="hidden" id="nav-logout" href="#"><small>(logout)</small></a>
