--- a/index.html
+++ b/index.html
@@ -138,5 +138,7 @@
     <script src="js/nav.js"></script>
     <script src="js/user.js"></script>
     <script src="js/stories.js"></script>
+
+    <script src="sss.js"></script>
   </body>
 </html>
