added editing and delete

--- a/index.html
+++ b/index.html
@@ -129,6 +129,20 @@
       <button type="submit">Submit</button>
     </form>
 
+    <div id="popupBackdrop" class="popup-backdrop">
+      <div class="popup-form">
+        <form id="myPopupForm">
+          <label for="title2">Title: </label>
+          <input type="text" name="title2" id="title2" />
+          <label for="author2">Author: </label>
+          <input type="text" name="author2" id="author2" />
+          <label for="url2">URL: </label>
+          <input type="text" name="url2" id="url2" />
+          <button type="submit">Submit</button>
+        </form>
+      </div>
+    </div>
+
     <!-- Library JS & our JS -->
     <script src="https://unpkg.com/jquery"></script>
     <script src="https://unpkg.com/axios/dist/axios.js"></script>
