--- a/index.html
+++ b/index.html
@@ -114,20 +114,22 @@
     </section>
 
     <!--Add New Story Form -->
-    <form
-      action="#"
-      method="post"
-      id="addStory-form"
-      class="account-form hidden"
-    >
-      <label for="title">Title: </label>
-      <input type="text" name="title" id="title" />
-      <label for="author">Author: </label>
-      <input type="text" name="author" id="author" />
-      <label for="url">URL: </label>
-      <input type="text" name="url" id="url" />
-      <button type="submit">Submit</button>
-    </form>
+    <section class="container poping">
+      <form
+        action="#"
+        method="post"
+        id="addStory-form"
+        class="account-form hidden"
+      >
+        <label for="title">Title: </label>
+        <input type="text" name="title" id="title" />
+        <label for="author">Author: </label>
+        <input type="text" name="author" id="author" />
+        <label for="url">URL: </label>
+        <input type="text" name="url" id="url" />
+        <button type="submit">Submit</button>
+      </form>
+    </section>
 
     <div id="popupBackdrop" class="popup-backdrop">
       <div class="popup-form">
